fix(BlockPostFooter): used margin on author info to be able to collapse when no tags are present

--- a/Components/BlockPostFooter/_style.scss
+++ b/Components/BlockPostFooter/_style.scss
@@ -17,7 +17,7 @@
 
   .author {
     display: flex;
-    padding: 3rem 0;
+    margin: 3rem 0;
 
     &-avatarLink {
       flex-shrink: 0;
